--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
       </div>
       <!-- /Products -->
     </main>
-    <footer class="bg-dark py-5 head-foot">
+    <footer class="py-5 head-foot">
       <div class="container text-white">
         <div class="row justify-content-around">
           <div class="col-md-2 mb-4">
